There Has Been A Change In The Skills Page. When You Make An Active On The .prog-hold, The After For .prog-num will be hidden and the number for the .prog-num will be shown instead of 100%.

--- a/css/style.css
+++ b/css/style.css
@@ -641,6 +641,20 @@ section::before {
 .skills .box-skill .progress:has(.prog .prog-hold:hover) .prog-info .prog-num {
   color: #fff;
 }
+.skills
+  .box-skill
+  .progress:has(.prog .prog-hold:active)
+  .prog-info
+  .prog-num::after {
+  display: none;
+}
+.skills
+  .box-skill
+  .progress:has(.prog .prog-hold:active)
+  .prog-info
+  .prog-num {
+  color: var(--main-color);
+}
 .skills .box-skill .progress .prog {
   background-color: #eee;
   width: 100%;
